compile_fail_tests/destructure/struct_unknown_field.rs
use const_tools::destructure;

struct Wrap<T> {
    value: T,
}

impl<T> Wrap<T> {
    const fn test(self) -> T {
        destructure!(let Wrap { value, unknown: _ } = self);
        value
    }
}

fn main() {}
