compile_fail_tests/destructure/struct_unknown_field.stderr
error[E0026]: struct `Wrap` does not have a field named `unknown`
 --> compile_fail_tests/destructure/struct_unknown_field.rs:9:40
  |
9 |         destructure!(let Wrap { value, unknown: _ } = self);
  |                                        ^^^^^^^ struct `Wrap` does not have this field

error[E0609]: no field `unknown` on type `&Wrap<T>`
 --> compile_fail_tests/destructure/struct_unknown_field.rs:9:40
  |
9 |         destructure!(let Wrap { value, unknown: _ } = self);
  |                                        ^^^^^^^ unknown field
  |
  = note: available field is: `value`
